[B]V4.3.6[/B]
- Enable to make a torrent playlist

[B]V4.3.5[/B]
- Your Own List
- Url Test