@@ -1,6 +1,10 @@
+[B]V4.3.7[/B]
+- Enable Pastebin in My Own List type only code after raw/
+
+
 [B]V4.3.6[/B]
 - Enable to make a torrent playlist
 
 [B]V4.3.5[/B]
-- Your Own List
+- My Own List
 - Url Test
